log
Wed 20 Mar 2024 08:20:38 PM UTC: 
 tests:  0|5
total_score: 0/70
587bfba
Wed 20 Mar 2024 08:27:00 PM UTC: 
 exercises.c | 37 +++++++++++++++++++++++++++++++++++--
 1 file changed, 35 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:62:20: error: implicit declaration of function ‘firstList’ [-Werror=implicit-function-declaration]
   62 |   void *elemento = firstList(lista);
      |                    ^~~~~~~~~
exercises.c:62:20: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:76:3: error: implicit declaration of function ‘clean’ [-Werror=implicit-function-declaration]
   76 |   clean(lista);
      |   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
6518ed1
